# Pac-man

./: README.md  build_maze.py  characters.py  component.py  config.json  disp_test.py  display_characters.py  game.py  game_loop.py  high_scores.json  main.py  makefile  pyproject.toml  state.py  states.py  test.py
components/: __init__.py  game.py  settings.py  support_class.py
displaying/: __init__.py  display_characters.py  ghost_render.py  layer_render.py  pacman_render.py  ui_components.py
game_logic/: __init__.py  characters.py  component.py  ghosts.py  pacman.py  states.py
initialise/: init_game.py
maze/: build_maze.py  draw_maze.py  maze_construct.py  pacgums.py
states/: __init__.py  game_state.py  game_states.py  lost_state.py  menu_state.py  pause_state.py  save_score_state.py  victory_state.py
