[project]
name = "pac-man"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mazegenerator",
    "mypy>=2.1.0",
    "pygame-ce>=2.5.7",
]

[tool.uv.sources]
mazegenerator = { path = "mazegenerator-00002.0.1-py3-none-any.whl" }
